[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Health1" type="Label" parent="."]
margin_left = 110.0
margin_top = 54.0
margin_right = 150.0
margin_bottom = 68.0

[node name="Health2" type="Label" parent="."]
margin_left = 887.0
margin_top = 54.0
margin_right = 927.0
margin_bottom = 68.0

[node name="Hit" type="Button" parent="."]
margin_left = 191.0
margin_top = 346.0
margin_right = 375.0
margin_bottom = 427.0
text = "Hit"

[node name="Heal" type="Button" parent="."]
margin_left = 673.0
margin_top = 337.0
margin_right = 886.0
margin_bottom = 429.0
text = "Heal"

[connection signal="pressed" from="Hit" to="." method="_on_Hit_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_Heal_pressed"]
